# velo

./: .gitignore  .mypy.ini  API_DESIGN.md  BLOG.md  BUILD.md  Cargo.toml  FIXES.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  __init__.py  runner.py
benchmarks/compare/: __init__.py  vs_asyncio_naive.py  vs_bytewax.py  vs_faust.py
benchmarks/scenarios/: concurrency.py  latency.py  memory.py  startup.py  throughput.py
docs/: architecture.md  rust-data-path.md  throughput-tradeoff.md  throughput-v2-design.md
examples/: iot_sensor_burst.py  llm_token_stream.py  video_pipeline.py  webhook_correlator.py
results/: bench_v02.json
streamfn/: __init__.py  decorator.py  runtime.py  signals.py
streamfn-core/: Cargo.toml
streamfn-core/src/: arena.rs  backpressure.rs  lib.rs  worker.rs
streamfn/adapters/: __init__.py
tests/: __init__.py
tests/integration/: test_concurrent_streams.py  test_scale_to_zero.py  test_stateful_processing.py
tests/unit/: test_adapters.py  test_decorator.py  test_types.py
velo/: __init__.py  decorator.py  runtime.py  signals.py  types.py
velo-core/: Cargo.toml
velo-core/src/: channel.rs  lib.rs  scheduler.rs
velo/adapters/: file.py  generator.py  http.py
