[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "velo-stream"
version = "0.3.0"
description = "Fast, stateful, ephemeral stream functions with a Rust core"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
keywords = ["streaming", "async", "rust", "serverless", "stream-processing", "stateful", "scale-to-zero"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "psutil>=5.9.0",
]
benchmark = [
    "matplotlib>=3.8.0",
    "psutil>=5.9.0",
    "tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/sahilmalik27/velo"
Repository = "https://github.com/sahilmalik27/velo"
Issues = "https://github.com/sahilmalik27/velo/issues"

[tool.maturin]
python-source = "."
module-name = "velo._core"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=velo --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
lint.select = ["E", "F", "I", "N", "W", "UP"]
