[package]
name = "streamfn-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "streamfn_core"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
tokio.workspace = true
crossbeam.workspace = true
memmap2.workspace = true
parking_lot.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dashmap.workspace = true
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
