[package]
name = "velo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "velo_core"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
crossbeam.workspace = true
parking_lot.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dashmap.workspace = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
